Fixing issue with content not fitting the screen correctly

--- a/style.css
+++ b/style.css
@@ -10,40 +10,42 @@ h1 {
     width: 100%;
 }
 
-.stopWatch_Container.p {
+.stopWatch_Container{
   width: 100%;
-  left: 30%;
+  position: absolute;
+  top: 130px;
+  display: flex;
+  justify-content: center;
 }
 
 #stopwatch {
   color: #ffccff;
   background-color: rgba(128, 0, 128, 0.3);
-  padding-top: 5px;
-  padding-right: 10px;
-  padding-left: 10px;
   border-style: solid;
   font-size: 60px;
   text-align: center;
-  position: absolute;
-  top: 140px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.MainText_Container{
+    width: 100%;
+    position: absolute;
+    top: 300px;
+    display: flex;
+    justify-content: center;
 }
 
 #mainText {
 
-    position: absolute;
     color: #ffccff;
-    top: 300px;
-    left: 400px;
-    right: 400px;
     font-size: 16pt;
-    text-align: justify;
-    text-justify: inter-word;
     background-color: rgba(128, 0, 128, 0.3);
     border-style: solid;
-    padding-right: 20px;
+    padding-right: 2%;
+    padding-left: 2%;
     padding-top: 15px;
-    padding-left: 20px;
-    padding-bottom: 15px;
+    padding-bottom: 10px;
 }
 
 #purpleSeaVideo {
@@ -54,10 +56,18 @@ h1 {
     min-height: 100%;
 }
 
+.buttons{
+    /* width: 50px; */
+    /* margin: 0 auto; */
+}
+
 #signUpButton {
     position: absolute;
     top: 550px;
-    left: 450px;
+    /* left: 450px; */
+    /* display: inline-block;
+    margin: 0 auto; */
+    margin-left: 60%;
     font-size: 22pt;
     background-color: #ff80ff;
     color: white;
@@ -72,8 +82,9 @@ h1 {
 #logInButton {
     position: absolute;
     top: 550px;
-    left: 750px;
+    /* left: 750px; */
     font-size: 22pt;
+    margin-left: 35%;
     background-color: #ff80ff;
     color: white;
     border-style: solid;
